# tree-sitter-unrealscript

./: .gitignore  Cargo.toml  LICENSE  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: directives.txt  expressions.txt  statements.txt
