[package]
name = "tree-sitter-unrealscript"
description = "unrealscript grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "unrealscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/shrimpza/tree-sitter-unrealscript"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
